--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,55 @@
-.env
-package-lock.json
+# Node modules
 node_modules/
+
+# Environment variables
+.env
+
+# Logs
+logs/
+*.log
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# Dependency directories
+jspm_packages/
+dist/
+
+# TypeScript compiled output
+*.tsbuildinfo
+
+# Optional npm cache directory
+.npm
+
+# Optional eslint cache
+.eslintcache
+
+# Optional REPL history
+.node_repl_history
+
+# Output of 'npm pack'
+*.tgz
+
+# Yarn Integrity file
+.yarn-integrity
+
+# dotenv environment variable file
+.env.*
+
+# Local npm binaries
+.npmrc
+.yarnrc
+
+# MacOS files
+.DS_Store
+
+# Coverage directory used by testing tools
+coverage/
+
+# IDE or editor specific files
+.vscode/
+.idea/
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
