--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Discord bot",
   "main": "dist/main.js",
   "scripts": {
-    "start": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts"
+    "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
+    "dev-win": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node src/main.ts\"",
+    "build": "tsc",
+    "serve": "node dist/main.js"
   },
   "repository": {
     "type": "git",
