🔧 (.env.example): añadir variables de entorno para Discord y Spotify 🔧 (.gitignore): eliminar la exclusión de .env y ajustar la regla para .env 🔧 (package.json): añadir dependencia "@spotify/web-api-ts-sdk" v1.2.0
Se añadieron variables de entorno en el archivo .env.example para Discord y Spotify, lo que facilita la configuración del entorno de desarrollo. Se eliminó la exclusión de .env en el archivo .gitignore y se ajustó la regla para .env para que coincida con el nuevo archivo .env.example. Además, se añadió la dependencia "@spotify/web-api-ts-sdk" en la versión 1.2.0 al archivo package.json para integrar la funcionalidad de la API de Spotify en el proyecto.

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,6 @@
 # Node modules
 node_modules/
 
-# Environment variables
-.env
-
 # Logs
 logs/
 *.log
@@ -34,7 +31,7 @@ dist/
 .yarn-integrity
 
 # dotenv environment variable file
-.env.*
+/.env
 
 # Local npm binaries
 .npmrc
