--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@spotify/web-api-ts-sdk": "^1.2.0",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5"
   }
