🔧 (.github/workflows/deploy.yml): añadir soporte para variables de entorno en el archivo .env 🔧 (Dockerfile): copiar el archivo .env al directorio dist/ Se agregó la creación del archivo .env en el flujo de trabajo de implementación para proporcionar soporte para las variables de entorno necesarias. Además, se copió el archivo .env al directorio dist/ en el Dockerfile para asegurarse de que esté disponible en la imagen Docker durante la ejecución. Esto garantiza que la aplicación pueda acceder a las variables de entorno necesarias para su funcionamiento correcto.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -32,8 +32,21 @@ jobs:
         run: |
           yarn build
 
-      - name: Validate files
+      - name: Create .env file
+        run: |
+          echo "DC_BOT_TOKEN=${{ secrets.DC_BOT_TOKEN }}" >> .env
+          echo "DC_BOT_PUBLIC_KEY=${{ secrets.DC_BOT_PUBLIC_KEY }}" >> .env
+          echo "DC_APP_ID=${{ secrets.DC_APP_ID }}" >> .env
+          echo "DC_BOT_SECRET_KEY=${{ secrets.DC_BOT_SECRET_KEY }}" >> .env
+
+      - name: Copy .env to dist directory
+        run: cp .env dist/
+
+      - name: Validate root files
         run: ls -l
+
+      - name: Validate dist files
+        run: ls -l dist/
 
       - name: Save Build Artifact
         uses: actions/upload-artifact@v3
