📝 (.github/workflows/deploy.yml): mostrar el contenido de .env en lugar de validar archivos dist 🔧 (Dockerfile): cambiar el directorio de trabajo y copiar archivos dist En el archivo de flujo de trabajo deploy.yml, se modificó la tarea para mostrar el contenido del archivo .env en lugar de validar los archivos en la carpeta dist. Esto puede ser útil para verificar la configuración de entorno utilizada en el despliegue. En el Dockerfile, se cambió el directorio de trabajo a /usr/src/app y se copiaron los archivos de la carpeta dist a ese directorio. Esto asegura que los archivos necesarios estén disponibles para la ejecución del contenedor Docker.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -45,8 +45,8 @@ jobs:
       - name: Validate root files
         run: ls -l
 
-      - name: Validate dist files
-        run: ls -l dist/
+      - name: Show .env content
+        run: cat ./dist/.env
 
       - name: Save Build Artifact
         uses: actions/upload-artifact@v3
