🔧 (.github/workflows/deploy.yml): añadir la dependencia dotenv en producción La dependencia dotenv se ha añadido en producción para asegurar que las variables de entorno se carguen correctamente en el entorno de producción. Esto garantiza que la aplicación funcione de manera consistente en diferentes entornos.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install
+          yarn add dotenv --prod
 
       - name: Build app
         run: |
