🔧 (.github/workflows/deploy.yml): añadir la instalación de dotenv Se añadió la instalación de la dependencia dotenv al flujo de trabajo de implementación. Esto se hizo para asegurarse de que la aplicación tenga acceso a las variables de entorno definidas en un archivo .env durante el proceso de implementación.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,9 @@ jobs:
       - name: Install dependencies
         run: |
           yarn install
+
+      - name: Install dotenv
+        run: |
           yarn add dotenv --prod
 
       - name: Build app
