--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,31 +6,16 @@ on:
       - main
 
 jobs:
-  Build:
+  Deployment:
     runs-on: ubuntu-latest
+    needs: [Build]
+
     steps:
       - uses: actions/checkout@v3
         with:
           path: "."
           fetch-depth: 0
           show-progress: "true"
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: 20
-
-      - name: Install Yarn
-        run: |
-          npm install -g yarn
-
-      - name: Install dependencies
-        run: |
-          yarn install --production
-
-      - name: Build app
-        run: |
-          yarn build
 
       - name: Create .env file
         run: |
@@ -39,35 +24,8 @@ jobs:
           echo "DC_APP_ID=${{ secrets.DC_APP_ID }}" >> .env
           echo "DC_BOT_SECRET_KEY=${{ secrets.DC_BOT_SECRET_KEY }}" >> .env
 
-      - name: Validate root files
-        run: ls -l
-
-      - name: Save Build Artifact
-        uses: actions/upload-artifact@v3
-        with:
-          name: yor-bot
-          path: ./
-          retention-days: 1
-
-  Deployment:
-    runs-on: ubuntu-latest
-    needs: [Build]
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v3
-
-      - name: Download Build Artifact
-        uses: actions/download-artifact@v3
-        with:
-          name: yor-bot
-          path: ./
-
-      - name: Validate files
-        run: ls -l
-
-      - name: Validate dist files
-        run: ls -l dist/
+      - name: Validate Files
+        run: ls -la
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
