--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "@spotify/web-api-ts-sdk": "^1.2.0",
+    "discord-player": "^6.6.9",
     "discord.js": "^14.15.2",
     "dotenv": "^16.4.5"
   }
