🔧 (.github/workflows/deploy.yml): actualizar la clave SSH y la frase de contraseña Se actualizó la configuración del flujo de trabajo de implementación para utilizar una clave SSH en lugar de una contraseña para la autenticación en el servidor VPS. Además, se agregó el soporte para una frase de contraseña asociada con la clave SSH para mejorar la seguridad en el proceso de implementación.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -42,7 +42,8 @@ jobs:
         with:
           host: ${{ secrets.VPS_HOST }}
           username: ${{ secrets.VPS_USERNAME }}
-          password: ${{ secrets.VPS_PASS_KEY }}
+          key: ${{ secrets.VPS_SSH_PRIV_KEY }}
+          passphrase: ${{ secrets.VPS_SSH_PASSPHRASE }}
           script: |
             docker pull ${{ secrets.DOCKER_USERNAME }}/yor-bot-img:latest
             docker stop yor-bot-dc-container
