🔧 (package.json): añadir script 'cmd-script' para ejecutar comandos de despliegue 📝 (ping.ts): convertir exportación a una constante y añadir exportación por defecto 📝 (play.ts): eliminar archivo 'play.ts' que ya no se utiliza ♻️ (main.ts): refactorizar carga de comandos para manejar errores de exportación
Se añadió un nuevo script 'cmd-script' al archivo package.json para ejecutar comandos de despliegue. En el archivo ping.ts, se convirtió la exportación a una constante y se añadió una exportación por defecto. El archivo play.ts fue eliminado ya que no se utiliza. En el archivo main.ts, se refactorizó la carga de comandos para manejar errores de exportación de forma más robusta.

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "dev-win": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node src/main.ts\"",
+    "cmd-script": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/deploy-commands.ts",
     "build": "tsc",
     "serve": "node dist/main.js"
   },
