🔧 (.github/workflows/deploy.yml): añadir verificación de estado de contenedor Se ha añadido una verificación para comprobar si el contenedor 'yor-bot-dc-container' se está ejecutando correctamente después de iniciarlo. Esto proporciona una capa adicional de seguridad y control para garantizar que el contenedor se inicie correctamente antes de continuar con las siguientes tareas en el flujo de trabajo de implementación.

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,5 +50,12 @@ jobs:
             docker rm yor-bot-dc-container
             docker run -d --name yor-bot-dc-container nicodav28/yor-bot-img:latest
 
+            if docker ps | grep yor-bot-dc-container; then
+              echo "Container is running successfully"
+            else
+              echo "Failed to start container"
+              exit 1
+            fi
+
       - name: Prune System
         run: "echo y | docker system prune -a"
