--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "dev-win": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node src/main.ts\"",
     "cmd-script": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/deploy-commands.ts",
-    "build": "tsc",
+    "build": "rm -rf dist && tsc",
     "serve": "node dist/main.js"
   },
   "repository": {
