--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "nodemon --watch 'src/**/*.ts' --exec 'ts-node' src/main.ts",
     "dev-win": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node src/main.ts\"",
     "cmd-script": "nodemon --watch \"src/**/*.ts\" --exec \"ts-node\" src/deploy-commands.ts",
-    "build": "rm -rf dist && tsc",
+    "build": "tsc",
+    "build-test": "rm -rf dist && tsc && node dist/main.js",
     "serve": "node dist/main.js"
   },
   "repository": {
@@ -27,10 +28,17 @@
     "typescript": "^5.4.5"
   },
   "dependencies": {
+    "@discord-player/extractor": "^4.4.7",
+    "@discordjs/voice": "^0.17.0",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@web-scrobbler/metadata-filter": "^3.1.0",
+    "commandkit": "^0.1.10",
     "discord-player": "^6.6.9",
     "discord.js": "^14.15.2",
-    "dotenv": "^16.4.5"
+    "distube": "^4.2.2",
+    "dotenv": "^16.4.5",
+    "node-opus": "^0.3.3",
+    "opusscript": "^0.1.1",
+    "youtube-sr": "^4.3.11"
   }
 }
