--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
   "dependencies": {
     "@discord-player/extractor": "^4.4.7",
     "@discordjs/voice": "^0.17.0",
+    "@distube/spotify": "^1.6.1",
+    "@distube/yt-dlp": "^1.1.3",
     "@spotify/web-api-ts-sdk": "^1.2.0",
     "@web-scrobbler/metadata-filter": "^3.1.0",
     "commandkit": "^0.1.10",
@@ -38,7 +40,6 @@
     "distube": "^4.2.2",
     "dotenv": "^16.4.5",
     "node-opus": "^0.3.3",
-    "opusscript": "^0.1.1",
-    "youtube-sr": "^4.3.11"
+    "opusscript": "^0.1.1"
   }
 }
